--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,8 @@ header {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
 }
 
+
+
 .nav {
   height: 7.2rem;
   display: flex;
@@ -84,6 +86,7 @@ header {
 .fa-times {
   display: none;
 }
+
 .nav-list {
   list-style: none;
   position: flex;
@@ -91,14 +94,14 @@ header {
   left: 0;
   width: 80%;
   height: 100vh;
-  background-color: var(--main-font-color-dark);
+  background-color: var(transparent);
   padding: 4.4rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   z-index: 1250;
   transform: translateX(-100%);
-  transition: transform .5s;
+  transition: transform 0s;
 }
 
 .nav::before {
@@ -114,10 +117,10 @@ header {
   transform: scale(0);
   transition: opacity .5s;
 }
-
+/*
 .open .fa-times {
   display: block;
-}
+}*?
 /*
 .open .fa-bars {
   display: none;
@@ -475,7 +478,7 @@ footer {
    .item-toggle {
     display: none;
   }*/
-
+  
   .nav {
     justify-content: space-between;
   }
