--- a/mysite/myapp/static/styles2.css
+++ b/mysite/myapp/static/styles2.css
@@ -43,14 +43,14 @@
     background-color: #5C6654;
     padding-left: 20%;
     padding-right: 20%;
-    height: 100%;
+    height: 200%;
     text-align: center;
 }
 .mainpage-middle{
     padding-top: 8%;
     background-color: #B6C9A5;
     color:black;
-    height: 100vh;
+    height: 200vh;
     padding-left: 10%;
     padding-right: 10%;
 }
@@ -68,3 +68,76 @@
     margin: 8px 0;
     box-sizing: border-box;
 }
+
+.graphimagestyle{
+  width: 150%;
+  height: 150%;
+  align-content: center;
+}
+
+.applybutton {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  box-shadow: 0 9px #999;
+}
+
+.applybutton:hover {background-color: #3e8e41}
+
+.applybutton:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+
+
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  text-align: left;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #3e8e41;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
